--- a/index.html
+++ b/index.html
@@ -4,28 +4,154 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio - Home</title>
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/pages/home.css" />
+    <link rel="stylesheet" href="css/home.css" />
   </head>
+
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <main>
-      <h1>Welcome to my Portfolio</h1>
+      <div class="welcome-message">
+        <h1>Hello, I'm Sofia</h1>
+        <p>Welcome to my portfolio website!</p>
+        <button type="button" class="btn btn-dark">Explore the website</button>
+      </div>
+
+      <div id="MainCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-100"
+              src="images/carousel1.jpg"
+              alt="First slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="images/carousel2.jpg"
+              alt="Second slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="images/carousel3.jpg"
+              alt="Third slide"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div id="project-section">
+        <div class="project-grid">
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">[project title]</h5>
+              <h6 class="card-subtitle mb-2 text-muted">[project subtitle]</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Show More</a>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">[project title]</h5>
+              <h6 class="card-subtitle mb-2 text-muted">[project subtitle]</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Show More</a>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">[project title]</h5>
+              <h6 class="card-subtitle mb-2 text-muted">[project subtitle]</h6>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="card-link">Show More</a>
+            </div>
+          </div>
+        </div>
+        <div class="page-link-project">
+          <a href="projects.html"
+            ><button type="button" class="btn btn-primary">
+              See all projects
+            </button></a
+          >
+        </div>
+      </div>
+
+      <div id="about-section" class="p-5">
+        <h2>About Me</h2>
+        <p>Learn more about my background, skills, and interests.</p>
+        <a href="about.html" class="btn btn-secondary">Read More</a>
+      </div>
+
+      <div id="contact-section" class="p-5">
+        <h2>Contact Me</h2>
+        <p>Have questions or want to work together? Reach out to me!</p>
+        <a href="contact.html" class="btn btn-secondary">Get in Touch</a>
+      </div>
     </main>
 
     <footer>
-      <p>&copy; 2024 My Portfolio</p>
+      <p>&copy; 2025 My Portfolio</p>
     </footer>
 
     <script src="js/script.js"></script>
     <script src="js/home.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
