--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -37,14 +37,67 @@
     </nav>
 
     <main>
-      <h2>My Projects</h2>
+      <h1 class="text-center pt-4 pb-3">My Projects</h1>
+      <div class="container">
+        <div class="row" id="projects-container">
+          <!-- Cards will be dynamically generated here -->
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="popupModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="popupModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="popupModalLabel">Project Details</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p id="project-details">
+                Details about the project will go here.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer>
       <p>&copy; 2025 My Portfolio</p>
     </footer>
+
     <script src="js/script.js"></script>
     <script src="js/projects.js"></script>
+
+    <!-- JQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Bootstrap JS -->
     <script
