--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -38,7 +38,23 @@
     </nav>
 
     <main>
-      <h2>Contact Me</h2>
+      <!-- create a from ask user to put his/her name 
+       save the name and i will reuse it for greeting message for customize my webpage -->
+
+      <h1>Contact Us</h1>
+      <p id="greeting">Welcome, Guest</p>
+
+      <label for="name">Enter your name</label>
+      <input type="text" id="name" placeholder="Enter your name" />
+
+      <button onclick="saveName()">Save Name</button>
+
+      <!-- I can use my localStorage and call the user with his/her first name -->
+      <p id="todoList">Guest, This is your To-Do List</p>
+
+      <!--test this line-->
+      <div id="contactFormContainer"></div>
+      <!--placeholder line-->
     </main>
 
     <footer>
@@ -46,6 +62,13 @@
     </footer>
     <script src="js/script.js"></script>
     <script src="js/contact.js"></script>
+
+    <!-- JQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Bootstrap JS -->
     <script
