--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@
         <div class="project-grid">
           <div class="card" style="width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">[project title]</h5>
-              <h6 class="card-subtitle mb-2 text-muted">[project subtitle]</h6>
+              <h5 class="card-title">C# Project</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Factoid Project</h6>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                A c# application that allows users to ask questions and recieve answers from a text.
               </p>
               <a href="#" class="card-link">Show More</a>
             </div>
@@ -93,11 +92,11 @@
 
           <div class="card" style="width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">[project title]</h5>
-              <h6 class="card-subtitle mb-2 text-muted">[project subtitle]</h6>
+              <h5 class="card-title">Database Project</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Interactive Database</h6>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                An interactive database project that allows users to add, remover, search and
+                filter data based on various criteria.
               </p>
               <a href="#" class="card-link">Show More</a>
             </div>
@@ -105,11 +104,11 @@
 
           <div class="card" style="width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">[project title]</h5>
-              <h6 class="card-subtitle mb-2 text-muted">[project subtitle]</h6>
+              <h5 class="card-title">Vehicle Management System</h5>
+              <h6 class="card-subtitle mb-2 text-muted">C# Vehicle Management System</h6>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                A C# application designed to manage vehicle information, including adding, updating, and deleting vehicle records.
+                It also provides features for searching and filtering vehicles based on criteria such as speed, and price.
               </p>
               <a href="#" class="card-link">Show More</a>
             </div>
